# iris-project

./: CMakeLists.txt  Iris.cpp  LICENSE  README.md
Client/: package.json  tsconfig.json
Client/src/: client.ts
Core/: Location.hpp  Range.hpp
JSON/: Field.hpp  Json.hpp
JSON/LSP/: AnnotatedTextEdit.cpp  CancelParams.hpp  ChangeAnnotation.cpp  ChangeAnnotation.hpp  ChangeAnnotationIdentifier.hpp  Command.cpp  Command.hpp  CreateFile.cpp  CreateFile.hpp  DeleteFile.hpp  Diagnostic.cpp  Header.cpp  (+50 more)
LSP/: AnnotatedTextEdit.hpp  CallHierarchyClientCapabilities.cpp  CallHierarchyClientCapabilities.hpp  CallHierarchyOptions.cpp  CallHierarchyOptions.hpp  CallHierarchyRegistrationOptions.cpp  CallHierarchyRegistrationOptions.hpp  CancelParams.cpp  CancelParams.hpp  Cells.cpp  Cells.hpp  ChangeAnnotation.hpp  ChangeAnnotationSupport.cpp  ChangeAnnotationSupport.hpp  ClientCapabilities.cpp  ClientCapabilities.hpp  ClientInfo.cpp  ClientInfo.hpp  CodeActionClientCapabilities.cpp  CodeActionClientCapabilities.hpp  CodeActionKind.cpp  CodeActionKind.hpp  CodeActionLiteralSupport.cpp  CodeActionLiteralSupport.hpp  CodeActionOptions.cpp  CodeActionOptions.hpp  CodeDescription.cpp  CodeDescription.hpp  CodeLensClientCapabilities.cpp  CodeLensClientCapabilities.hpp  CodeLensOptions.cpp  CodeLensOptions.hpp  CodeLensWorkspaceClientCapabilities.cpp  CodeLensWorkspaceClientCapabilities.hpp  Command.cpp  Command.hpp  CompletionClientCapabilities.cpp  CompletionClientCapabilities.hpp  CompletionItem.cpp  CompletionItem.hpp  (+320 more)
Meta/: DefaultConstructible.hpp  Same.hpp  Serialisable.hpp
